# expanse

./: app.py  forms.py  pyproject.toml
templates/: base.html  expense.html  flask_message.html  index.html
