[project]
name = "expense"
version = "0.1.0"
description = ""
authors = [
    {name = "Evan Baird",email = "evanbaird@evans-mbp.lan"}
]
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "flask-wtf (>=1.2.2,<2.0.0)",
    "environs (>=14.5.0,<15.0.0)",
    "email-validator (>=2.3.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (==9.0.2)",
    "ipython (==9.10.0)",
    "pre-commit (==4.5.1)"
]
